Attempt to fix modal positioning on mobile

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -27,9 +27,3 @@ html, body{
   background: $white;
 }
 
-.open-modal {
-  overflow: hidden!important;
-  .content-area {
-    overflow: hidden!important;
-  }
-}
